--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algorithm",
   "version": "1.0.0",
   "description": "",
-  "main": "richestCustomerWealth.js",
+  "main": "src/richestCustomerWealth.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
